--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t docker-react -f ./client.Dockerfile.dev ./client 
+  - docker build -t docker-react -f ./client/Dockerfile.dev ./client 
 
 script:
   - docker run docker-react npm test -- --coverage
