--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3'
-
 services:
   postgres:
     image: 'postgres:latest'
+    environment:
+      - POSTGRES_PASSWORD=postgres_password
   redis:
     image: 'redis:latest'
   nginx:
-    depend_on:
+    depends_on:
       - api
       - client
     restart: always
@@ -32,6 +33,7 @@ services:
       - PGPORT=5432
 
   client:
+    stdin_open: true
     build: 
       dockerfile: Dockerfile.dev
       context: ./client
@@ -45,5 +47,8 @@ services:
     volumes:
       - /app/node_modules
       - ./worker:/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
 
 
