--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t docker-react -f ./client/Dockerfile.dev ./client 
 
 script:
-  - docker run -e CI=true docker-react-test npm test
+  - docker run -e CI=true docker-react npm test
 
 after_success:
   - docker build -t multi-react ./client
