--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ script:
   - docker run -e CI=true docker-react npm test
 
 after_success:
-  - docker build -t multi-react ./client
-  - docker build -t multi-nginx ./nginx
-  - docker build -t multi-server ./server
-  - docker build -t multi-worker ./worker
+  - docker build -t rofi/multi-react ./client
+  - docker build -t rofi/multi-nginx ./nginx
+  - docker build -t rofi/multi-server ./server
+  - docker build -t rofi/multi-worker ./worker
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin # echo $password is retrieve travis env variable and input to docker login login to docker hub to push image publicly
-  - docker push multi-react
-  - docker push multi-nginx
-  - docker push multi-server
-  - docker push multi-worker
+  - docker push rofi/multi-react
+  - docker push rofi/multi-nginx
+  - docker push rofi/multi-server
+  - docker push rofi/multi-worker
